# DevDock

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml.example  build.rs  tailwind.config.js
container/: Dockerfile  entrypoint.sh
scripts/: tailwind.sh
src/: containers.rs  frontend.rs  login.rs  macros.rs  main.rs
styles/: _elements.scss  buttons.scss  elements.scss  headers.scss  links.scss  spinner.scss  styles.scss
templates/: anonymous_index.html.tera  base.html.tera  index.html.tera  login.html.tera  old_token.html.tera  status.html.tera
