[package]
name = "devdock"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
log = "0.4.20"
rocket_oauth2 = "0.5.0"
serde_json = "1.0.108"
anyhow = "1.0.77"
reqwest = { version = "0.11.23", features = ["serde_json", "json"] }
serde = "1.0.193"
chrono = "0.4.31"
bollard = "0.15.0"
sled = "0.34.7"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
